--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <img src="img/humidity.png">
                     <div>
                         <p class="humidity">50%</p>
-                        <p>Humidade</p>
+                        <p>Umidade</p>
                     </div>
                 </div>
                 <div class="col">
